[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/Zuruuh/puff"
authors = ["Younès Ziadi <zuruh.dev@proton.me>"]
license = "MIT"
readme = "./README.md"

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
php-parser-rs = { git = "https://github.com/php-rust-tools/parser", version = "0.1.3" }
