[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/Zuruuh/phence"
homepage = "https://github.com/Zuruuh/phence"
description = "TODO"
keywords = ["TODO"]
categories = ["TODO"]
authors = ["Younès Ziadi <zuruh.dev@proton.me>"]
license = "MIT"
readme = "./README.md"

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
oxc_allocator = "0.5.0"
miette = "5.10.0"
