[package]
name = "phence_parser"
version = "0.5.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
