[package]
name = "puff_formatter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puff_config = { version = "0.1.0", path = "../puff_config" }
php-parser-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
